Changed heroimage positioning

--- a/app/views/welcome/circle.html
+++ b/app/views/welcome/circle.html
@@ -35,7 +35,11 @@
                     <div class="container clearfix nomargin nopadding" style="min-height:100vh; min-width: 100vw; background: transparent;">
                         <div id="simple" style="background: white">
                             <div class="step" data-x="700" data-y="-299" data-rotate="0" data-scale="1">
-                                <p style="font-size: 40px;color: black">Slide 1</p>
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>Slide 1
+                                    </div>
+                                </div>
                             </div>
                             <div class="step" data-x="-400" data-y="800" data-rotate="90" data-scale="1">
                                 <p style="font-size: 40px;color: black">Slide 2</p>
