--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -107,7 +107,7 @@ b{
     height: 50vh;
     content: "";
     left: -20vw;
-    bottom: 0;
+    bottom: -1.8vw;
     padding-top: 66.64%;
     float: left;
 
