--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -102,7 +102,7 @@ b{
     background-position: bottom;
     background-size: contain ;
     background-repeat: no-repeat;
-    position: absolute;
+    position: relative;
     width: 50vh;
     height: 50vh;
     content: "";
