--- a/app/views/welcome/circle.html
+++ b/app/views/welcome/circle.html
@@ -37,7 +37,7 @@
                             <div class="step" data-x="700" data-y="-299" data-rotate="0" data-scale="1">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>Slide 1
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>Slide achal
                                     </div>
                                 </div>
                             </div>
