--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -59,7 +59,7 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
                                     <div></div>
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>Solutions</b> page. <br>Content to be added. <a href="#home">home</a></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>This is the <b>Solutions</b> page. <br>Content to be added. <a href="#home">home</a></h2>
                                     </div>
                                 </div>
                             </div>
