--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -35,8 +35,7 @@
                     <div class="container clearfix nomargin nopadding" style="min-height:100vh; min-width: 100vw; background: transparent;">
                         <div id="simple" style="background: white">
                             <div id="home" class="step nomargin">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div></div>
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>Long Term Technology <br> <b>Acceleration</b> for Web Products</h2>
                                     </div>
