--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -15,15 +15,13 @@
                             <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
                             <nav id="primary-menu">
                                 <ul class="ip_nav" style="display: flex;flex-direction: column; height: 50vh width:200px; ">
-                                    <li><a href="#home" class="selected">Home</a>
+                                    <li><a href="#baba">BabaG</a>
                                     </li>
-                                    <li><a href="#solutions">Solutions</a>
+                                    <li><a href="#about">About</a>
                                     </li>
-                                    <li><a href="#expertise">Expertise</a>
+                                    <li><a href="#people">People</a>
                                     </li>
                                     <li><a href="#careers">Careers</a>
-                                    </li>
-                                    <li><a href="#about">About Us</a>
                                     </li>
                                     <li><a href="#contact">Contact</a></li>
                                 </ul>
@@ -40,20 +38,12 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
                                     <div></div>
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>Long Term Technology <br> <b>Acceleration</b> for Web Products</h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200;"><div class="heroimage"></div><b style="text-align: right; font-size: 50px">IdeaPortal</b><br><i style="text-align: center; font-size: 35px">Breathing Life Into Vision</i>
                                     </div>
                                 </div>
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
-                                        <a class="button button-large button-border button-rounded tright">Are You A Product Owner?</a>
-                                        <a class="button button-large button-dark button-rounded tright">Discover!</a>
-                                    </div>
-                                    <div class="center divcenter row clearfix commonheight" style="">
-                                        <div class="container clearfix" style="width:100%">
-                                            <div class="col_one_third secondary_cta_container " style="padding-left: 10vw;"><a class=" pull-left  secondary_cta  " style="min-width:100%">World Class Delivery <br>& Implementation</a></div>
-                                            <div class="col_one_third secondary_cta_container" style=""><a class=" pull-left  secondary_cta  " style="min-width:75%; padding-left: 30%; ">Pragmatic Product <br>Engineering & Design</a></div>
-                                            <div class="col_one_third secondary_cta_container col_last  norightmargin " style="padding-left: 7vw;"><a class=" pull-left  secondary_cta  " style="min-width:100%">Business Innovation &<br> Growth Acceleration</a></div>
-                                        </div>
+                                   <p style="font-weight: 200; font-size: 25px; color: black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
                                     </div>
                                 </div>
                             </div>
@@ -76,14 +66,14 @@
                                 </div>
                                 <div class="allmargin center" style="color:black;display: flex; padding: 3">
 
-                                        <div class="p-2 box1" style="border-left: 1px solid black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
-                                        </div>
-                                        <div class="p-2 box1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
-                                        </div>
-                                        <div class="p-2 box1" style="border-right: 1px solid black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
-                                        </div>
-
+                                    <div class="p-2 box1" style="border-left: 1px solid black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
                                     </div>
+                                    <div class="p-2 box1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
+                                    </div>
+                                    <div class="p-2 box1" style="border-right: 1px solid black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
+                                    </div>
+
+                                </div>
                             </div>
 
                             <div id="expertiseoverview" class="step" data-x="3000" data-rotate-x="90" data-rotate-y="90" data-z="10" data-scale="8" data-exclude="true">
@@ -166,7 +156,7 @@
                                 </b>
                             </div>
 
-                            <div id="solutions4" class="step" data-x="4500" data-y="8000" data-z="1000" data-rotate-x="90" data-scale="2" data-exclude="true" style="pointer-events: auto;" >
+                            <div id="solutions4" class="step" data-x="4500" data-y="8000" data-z="1000" data-rotate-x="90" data-scale="2" data-exclude="true" style="pointer-events: auto;">
                                 <b class="topleft" style="color:black">Solutons4
                                 </b>
                             </div>
@@ -226,10 +216,10 @@
             });
             var show = document.querySelector('#sol');
             show.addEventListener('click', function runThisOnButtonClick(event) {
-            $('#solutions1').css("opacity","1");
-            $('#solutions2').css("opacity","1");
-            $('#solutions3').css("opacity","1");
-            $('#solutions4').css("opacity","1");
+                $('#solutions1').css("opacity", "1");
+                $('#solutions2').css("opacity", "1");
+                $('#solutions3').css("opacity", "1");
+                $('#solutions4').css("opacity", "1");
             });
             // var hide = document.querySelector('#home','#solutions','#expertise','#contact','#about','#careers');
             // hide.addEventListener('click', function runThisOnButtonClick(event) {
@@ -245,4 +235,4 @@
             // $('#solutions3').css("opacity","0")
             // $('#solutions4').css("opacity","0")}
             // }, 1000);
-</script>
+            </script>
