--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -35,8 +35,8 @@
                         <div id="simple" style="background: white;perspective: 5500px !important;">
 
                             <div id="home" class="step nomargin" data-x="3000" data-z="10" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div></div>
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;"><div class="heroimage"></div><b style="text-align: right; font-size: 50px">IdeaPortal</b><br><i style="text-align: center; font-size: 35px">Breathing Life Into Vision</i>
                                     </div>
@@ -48,16 +48,9 @@
                                 </div>
                             </div>
 
-                            <div id="solutionoverview" class="step" data-x="3000" data-rotate-x="90" data-z="10" data-scale="3" data-exclude="true" style="background: transparent !important; pointer-events: none !important;">
-                                <!-- <a href="#solutions1" class="topleft">link1</a>
-                                <a href="#solutions2" class="topright">link2</a>
-                                <a href="#solutions3" class="bottomleft">link3</a>
-                                <a href="#solutions4" class="bottomright">link4</a> -->
-                            </div>
+                            <div id="baba" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-scale="15">
 
-                            <div id="solutions" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-scale="15">
-
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left;">This is the <b>Solutions</b> page. <br>Content to be added.<br><a id="sol"href="#solutionoverview">Know More</a></h2>
@@ -76,91 +69,42 @@
                                 </div>
                             </div>
 
-                            <div id="expertiseoverview" class="step" data-x="3000" data-rotate-x="90" data-rotate-y="90" data-z="10" data-scale="8" data-exclude="true">
-                                <a href="#solutions1" class="topleft">link1</a>
-                                <a href="#solutions2" class="topright">link2</a>
-                                <a href="#solutions3" class="bottomleft">link3</a>
-                                <a href="#solutions4" class="bottomright">link4</a>
-                            </div>
+                            <div id="about" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="90" data-scale="15">
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                            <div id="expertise" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="90" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div></div>
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>Expertise</b> page.<br> Content to be added.<br><a href="#expertiseoverview">Know More</a></h2>
                                     </div>
                                 </div>
                             </div>
 
-                            <div id="careeroverview" class="step" data-x="3000" data-rotate-x="90" data-rotate-y="180" data-z="10" data-scale="8" data-exclude="true">
-                                <a href="#solutions1" class="topleft">link1</a>
-                                <a href="#solutions2" class="topright">link2</a>
-                                <a href="#solutions3" class="bottomleft">link3</a>
-                                <a href="#solutions4" class="bottomright">link4</a>
-                            </div>
+                            <div id="people" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="180" data-scale="15">
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                            <div id="careers" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="180" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div></div>
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>Careers</b> page.<br>Content to be added.<br><a href="#careeroverview">Know More</a></h2>
                                     </div>
                                 </div>
                             </div>
 
-                            <div id="aboutoverview" class="step" data-x="3000" data-rotate-x="90" data-rotate-y="270" data-z="10" data-scale="8" data-exclude="true">
-                                <a href="#solutions1" class="topleft">link1</a>
-                                <a href="#solutions2" class="topright">link2</a>
-                                <a href="#solutions3" class="bottomleft">link3</a>
-                                <a href="#solutions4" class="bottomright">link4</a>
-                            </div>
+                            <div id="careers" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                            <div id="about" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div></div>
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>About</b> page.<br> Content to be added.<br><a href="#aboutoverview">Know More</a></h2>
                                     </div>
                                 </div>
                             </div>
 
-                            <div id="contactoverview" class="step" data-x="3000" data-rotate-x="180" data-z="10" data-scale="8" data-exclude="true">
-                                <a href="#solutions1" class="topleft">link1</a>
-                                <a href="#solutions2" class="topright">link2</a>
-                                <a href="#solutions3" class="bottomleft">link3</a>
-                                <a href="#solutions4" class="bottomright">link4</a>
-                            </div>
-
                             <div id="contact" class="step" data-x="3000" data-z="10" data-rotate-x="180" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div></div>
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                         This is the <b>Contact</b> page.<br>Content to be added.<br><a href="#contactoverview">Know More</a></h2>
                                     </div>
                                 </div>
                             </div>
-
-                            <div id="solutions1" class="step" data-x="500" data-y="8000" data-z="-1150" data-rotate-x="90" data-scale="2" data-exclude="true" style="pointer-events: auto;">
-                                <b class="topleft" style="color:black">Solutions1
-                                </b>
-                            </div>
-
-                            <div id="solutions2" class="step" data-x="4500" data-z="-1150" data-y="8000" data-rotate-x="90" data-scale="2" data-exclude="true" style="pointer-events: auto;">
-                                <b class="topleft" style="color:black">Solutions2
-                                </b>
-                            </div>
-
-                            <div id="solutions3" class="step" data-x="500" data-y="8000" data-z="1000" data-rotate-x="90" data-scale="2" data-exclude="true" style="pointer-events: auto;">
-                                <b class="topleft" style="color:black">Solutions3
-                                </b>
-                            </div>
-
-                            <div id="solutions4" class="step" data-x="4500" data-y="8000" data-z="1000" data-rotate-x="90" data-scale="2" data-exclude="true" style="pointer-events: auto;">
-                                <b class="topleft" style="color:black">Solutons4
-                                </b>
-                            </div>
-
                         </div>
 
                         <div id="footer" class="footer" style="margin-top:95vh;">
