Removed all content from pages and fixed nav bar glitch

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -52,20 +52,9 @@
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
-                                    <div class="center divcenter" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left;">This is the <b>Solutions</b> page. <br>Content to be added.<br><a id="sol"href="#solutionoverview">Know More</a></h2>
+                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left;"><div class="heroimage"></div></h2>
                                     </div>
-
-                                </div>
-                                <div class="allmargin center" style="color:black;display: flex; padding: 3">
-
-                                    <div class="p-2 box1" style="border-left: 1px solid black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
-                                    </div>
-                                    <div class="p-2 box1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
-                                    </div>
-                                    <div class="p-2 box1" style="border-right: 1px solid black;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec id purus sed tortor pretium finibus. Nulla sit amet aliquet massa. Nam eget tortor at leo ultrices condimentum. Cras eu nibh ut nunc viverra luctus vel sit amet lorem. Quisque venenatis viverra blandit. Aenean quis hendrerit justo. Nunc semper eget ex et aliquet. Sed in orci elit. Donec a elit quam. Mauris a felis sollicitudin nibh tristique imperdiet. Suspendisse id ante vitae nibh posuere varius at at justo.
-                                    </div>
-
                                 </div>
                             </div>
 
@@ -73,7 +62,7 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>Expertise</b> page.<br> Content to be added.<br><a href="#expertiseoverview">Know More</a></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
                                     </div>
                                 </div>
                             </div>
@@ -82,7 +71,7 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>Careers</b> page.<br>Content to be added.<br><a href="#careeroverview">Know More</a></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
                                     </div>
                                 </div>
                             </div>
@@ -91,7 +80,7 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">This is the <b>About</b> page.<br> Content to be added.<br><a href="#aboutoverview">Know More</a></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
                                     </div>
                                 </div>
                             </div>
@@ -100,8 +89,7 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
-                                        This is the <b>Contact</b> page.<br>Content to be added.<br><a href="#contactoverview">Know More</a></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +119,7 @@
                     transitionDuration: 2000 // Set this according to animation.transitionDuration
                         // It is used for setting the timeout for the transition
                 });
-                $(["home", "solutions", "about", "expertise", "contact"]).each(function() {
+                $(["baba", "about", "people", "careers", "contact"]).each(function() {
                     console.log(this);
                     console.log($('#' + this));
                     var self = this
