Added css for circular images and added all images in the assests folder

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -34,7 +34,7 @@
 
                         <div id="simple" style="background: white;perspective: 5500px !important;">
 
-                            <div id="home" class="step nomargin" data-x="3000" data-z="10" data-scale="15">
+                            <div id="home" class="step nomargin" data-x="10000" data-z="10" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
@@ -43,12 +43,12 @@
                                 </div>
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
-                                   <p style="font-weight: 200; font-size: 25px; color: black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                                        <p style="font-weight: 200; font-size: 25px; color: black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div id="baba" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-scale="15">
+                            <div id="baba" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
 
-                            <div id="about" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="90" data-scale="15">
+                            <div id="about" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="90" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
 
-                            <div id="people" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="180" data-scale="15">
+                            <div id="people" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="180" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
@@ -76,16 +76,24 @@
                                 </div>
                             </div>
 
-                            <div id="careers" class="step" data-x="3000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
+                            <div id="careers" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>
+                                        <p style="text-align: left; font-size: 15px"><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i></p></h2>
                                     </div>
+                                </div>
+                                <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+                                    <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
+
+                                        <p style="color:black">Ding Dong Bell</p>
+                                    </div>
+
                                 </div>
                             </div>
 
-                            <div id="contact" class="step" data-x="3000" data-z="10" data-rotate-x="180" data-scale="15">
+                            <div id="contact" class="step" data-x="10000" data-z="10" data-rotate-x="180" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
