Added all the photos on the website and when photo is clicked it goes to LinkedIn

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -68,6 +68,7 @@
                             </div>
 
                             <div id="people" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="180" data-scale="15">
+
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
@@ -77,17 +78,65 @@
                             </div>
 
                             <div id="careers" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
+
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div>
-                                        <p style="text-align: left; font-size: 15px"><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i></p></h2>
+
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
+                                            <div class="heroimage"></div>
+
+                                            <p style="text-align: left; font-size: 15px">
+                                                <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
+                                            </p>
+                                        </h2>
                                     </div>
                                 </div>
+
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
 
-                                        <p style="color:black">Ding Dong Bell</p>
+                                        <p class="people-more section-content-more">
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/achal-kaundinya-2a222a127/" target="_blank">
+                                                <img alt="Achal Kaundinya" class="human grayscale" src="assets/Achal.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/bharat-ganesh-01042053/" target="_blank">
+                                                <img alt="Bharat Ganesh" class="human grayscale" src="assets/Bharat.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/darshanputtannaiah/" target="_blank">
+                                                <img alt="Darshan Puttanaiha" class="human grayscale" src="assets/Darshan.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/disha-suresh-062998a0/" target="_blank">
+                                                <img alt="Disha Suresh" class="human grayscale" src="assets/Disha.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/kratik-nayak-a75012b6/" target="_blank">
+                                                <img alt="Kratik Nayak" class="human grayscale" src="assets/Kratik.jpg" />
+                                            </a>
+
+                                            <br>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/krishna-m-v-89a349137/" target="_blank">
+                                                <img alt="Krishna MV" class="human grayscale" src="assets/Krishna.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                                <img alt="Nikhil V V" class="human grayscale" src="assets/Nik.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/shyamal-bhat-65645796/" target="_blank">
+                                                <img alt="Shymal Bhatt" class="human grayscale" src="assets/Shyamal.jpg" />
+                                            </a>
+
+                                            <a class="person-link" href="https://www.linkedin.com/in/vikram-devaiah-39156976/" target="_blank">
+                                                <img alt="Vikram" class="human grayscale" src="assets/Vikram.jpg" />
+                                            </a>
+
                                     </div>
 
                                 </div>
