--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -107,6 +107,14 @@ b {
     float: left;
 }
 
+.section-content-more {
+    padding-top: 2em;
+}
+
+.people-more {
+    text-align: center;
+}
+
 .person {
     display: block;
     margin-bottom: 0;
@@ -202,6 +210,7 @@ b {
     opacity: 1;
     -webkit-filter: grayscale(0);
 }
+
 
 @media screen and (max-width: 1200px) {
     .herotext::before {
