--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -35,13 +35,21 @@
                         <div id="simple" style="background: white;perspective: 5500px !important;">
 
                             <div id="home" class="step nomargin" data-x="10000" data-z="10" data-scale="15">
+
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200;"><div class="heroimage"></div><b style="text-align: right; font-size: 50px">IdeaPortal</b><br><i style="text-align: center; font-size: 35px">Breathing Life Into Vision</i>
+
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
+                                            <div class="heroimage"></div>
+                                            <b style="text-align: right; font-size: 50px">IdeaPortal</b><br><i style="text-align: center; font-size: 35px">Breathing Life Into Vision</i>
+                                        </h2>
+
                                     </div>
                                 </div>
+
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
                                         <p style="font-weight: 200; font-size: 25px; color: black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                                     </div>
@@ -72,20 +80,8 @@
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div id="careers" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
-
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
-
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                             <div class="heroimage"></div>
-
                                             <p style="text-align: left; font-size: 15px">
                                                 <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
                                             </p>
@@ -136,6 +132,34 @@
                                             <a class="person-link" href="https://www.linkedin.com/in/vikram-devaiah-39156976/" target="_blank">
                                                 <img alt="Vikram" class="human grayscale" src="assets/Vikram.jpg" />
                                             </a>
+                                        </p>
+
+                                    </div>
+
+                                </div>
+                                </h2>
+                            </div>
+
+                            <div id="careers" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
+
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+
+                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
+                                            <div class="heroimage"></div>
+
+                                            <p style="text-align: left; font-size: 15px">
+                                                <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
+                                            </p>
+                                        </h2>
+                                    </div>
+                                </div>
+
+                                <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+
+                                    <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
+
 
                                     </div>
 
