aligned the text inside the buttons

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -159,7 +159,23 @@
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
+                                        <a class="button button-large button-border button-rounded tright" style="width: 150px;"><b style="text-align:center;">Developer</b></a>
 
+                                        <a class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Editor</b></a>
+
+                                        <a class="button button-large button-border button-rounded tright" style="width: 150px"><b style="text-align:center;">Operations</b></a>
+
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+
+                                        <a class="button button-large button-border button-rounded tright" style="width: 150px"><b style="text-align:center;">Copy Editor</b></a>
+
+                                        <a class="button button-large button-border button-rounded tright" style="width: 150px; padding: 0px 30px"><b style="text-align:center;">Designer</b></a>
+
+                                        <a class="button button-large button-border button-rounded tright" style="width: 150px;padding: 0px 30px"><b style="text-align:center;">Animator</b></a>
 
                                     </div>
 
