--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -160,7 +160,8 @@
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
 
-                                        <br><br>
+                                        <br>
+                                        <br>
 
                                         <a class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;"><b style="text-align:center;">Developer</b></a>
 
@@ -168,7 +169,11 @@
 
                                         <a class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px"><b style="text-align:center;">Operations</b></a>
 
-                                        <br><br><br><br><br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
+                                        <br>
 
                                         <a class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px"><b style="text-align:center;">Copy Editor</b></a>
 
@@ -182,10 +187,21 @@
                             </div>
 
                             <div id="contact" class="step" data-x="10000" data-z="10" data-rotate-x="180" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 25vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
+                                            <div class="heroimage"></div>
+                                            <p style="font-size:15px">
+                                                <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.</i>
+                                            </p>
+                                        </h2>
+                                    </div>
+                                </div>
+                                <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+
+                                    <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
+
                                     </div>
                                 </div>
                             </div>
